--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-electron",
-  "version": "1.0.0",  
+  "name": "k8s-browser",
+  "version": "1.0.0",
   "license": "MIT",
   "main": "main.js",
   "scripts": {
@@ -9,6 +9,7 @@
     "release": "rimraf .tmp/dist dist bin && webpack --config ./script/webpack-release.js --progress --colors && copy \"./src/package.json\" \".tmp/dist\" && electron-builder --config ./script/electron-builder.yml"
   },
   "dependencies": {
+    "@kubernetes/client-node": "0.11.0",
     "react": "16.12.0",
     "react-dom": "16.12.0"
   },
